@@ -16,7 +16,7 @@ The Virtual Keyboard by Takashi Iway (vkeybd) has been the inspiration for this
 one. It is a wonderful piece of software and has served us well for many years.
 Thanks!
 
-VMPK uses a modern GUI framework: Qt4, that gives excellent features and 
+VMPK uses a modern GUI framework: Qt5, that gives excellent features and
 performance. RtMIDI provides MIDI input/output features. Both frameworks are
 free and platform independent, available for Linux, Windows and Mac OSX.
 
@@ -44,10 +44,10 @@ http://sourceforge.net/projects/vmpk/files
 
 REQUIREMENTS
 
-You need Qt 4.8 or newer. Install the -devel package for your system, or 
-download the open source edition from Nokia:
+You need Qt 5.0 or newer. Install the -devel package for your system, or
+download the open source edition:
 
-    http://qt.nokia.com/downloads/
+    http://qt-project.org/downloads/
 
 RtMIDI is included in the source package. It uses the ALSA sequencer in Linux, 
 WinMM in Windows and CoreMIDI in Mac OSX, which are the native MIDI systems in 
@@ -146,8 +146,8 @@ To compile the sources in Windows, you need to download either the .bz2 or .gz
 archive and uncompress it using any utility that supports the format, like 
 7-Zip (http://www.7-zip.org)
 
-To configure the sources, you need qmake (from Qt4) or CMake. You need to set
-the PATH including the directories for Qt4 binaries, MinGW binaries, and also
+To configure the sources, you need qmake (from Qt5) or CMake. You need to set
+the PATH including the directories for Qt5 binaries, MinGW binaries, and also
 CMake binaries. The program CMakeSetup.exe is the graphic version of CMake for
 Windows.
 
@@ -170,8 +170,8 @@ NOTES FOR MAC OSX USERS
 
 The build system is configured to create an universal binary (x86+ppc) into an 
 app bundle. You need the Apple development tools and frameworks, as well 
-as the Qt4 SDK from Nokia. Note that VMPK 0.3.x requires the Carbon framework,  
-with the corresponding Carbon version of Qt.
+as the Qt5 SDK. Note that VMPK 0.6.x requires the Cocoa framework,
+with the corresponding Cocoa version of Qt.
 
 To compile VMPK using Makefiles, generated by qmake:
 
